--- a/TD_assign_bcknd2/package.json
+++ b/TD_assign_bcknd2/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
